# chip-8-interpreter

./: .clang-format  .clang-tidy  .gitignore  CHIP8_USAGE_GUIDE.md  CHIP8_USAGE_GUIDE.txt  CMakeLists.txt  GUI_FEATURES.md  README.md
.github/workflows/: ci.yml  cross-platform.yml
cmake/: Chip8Config.cmake.in  FindSDL2.cmake
docs/: API.md  ARCHITECTURE.md  BUILDING.md  GUI_FEATURES.md
packaging/: chip8.pc.in  install.sh  uninstall.cmake.in  uninstall.sh
scripts/: format_code.sh  static_analysis.sh
src/: CMakeLists.txt  chip8.cpp  chip8.h  disassembler.cpp  disassembler.h  gui_application.cpp  gui_application.h  imgui.ini  main.cpp  main_gui.cpp  random.h  version.h
src/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_impl_sdl2.cpp  imgui_impl_sdl2.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_textedit.h  imstb_truetype.h
tests/: CMakeLists.txt  chip8_test.cpp  error_handling_test.cpp  integration_test.cpp  opcodes_test.cpp  performance_test.cpp
